--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -5,6 +5,9 @@ TODO:
 
 
 
+// TODO: put selection circle on its own layer with own shader to make sun work with it
+// TODO: Use WEB GPU
+
 
 VERY GOOD!!!:
 blaster effects laser shooting: https://playground.babylonjs.com/#CMS27E#8
