--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -4,6 +4,7 @@ TODO:
  - gui
  - condense down jupiter with blender to one flat model
  - setTimeout should be replaced by babylon method everywhere
+ - replace all null checks with the special Typescript pickingInfoList[i].pickedMesh?.uniqueId; syntax
 
 // crowd nav https://playground.babylonjs.com/#X5XCVT#240
 
